<resources>
    <string name="app_name">Mark</string>
    <string name="title_activity_settings">Settings</string>
    <string name="about">About</string>


    <string name="on">On</string>
    <string name="off">Off</string>

    <string name="donate_menu_item_title">Donate</string>
    <string name="donate_url" translatable="false">https://paypal.me/ArvidKarlsson/10</string>

    <!--Start Menu-->
    <string name="play">Play</string>

    <!--ShakeGame-->
    <string name="time_to_shake_it">Time to shake it</string>


    <!--Activity-->
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">Game</string>

    <!--Settings-->
    <string name="sound">Sound</string>
    <string name="clear_score">Clear Score</string>
    <string name="clear">Clear</string>
    <string name="clear_history_question">Clear the history?</string>
    <string name="history_deleted">History Deleted</string>

    <!--Locate-->
    <string name="you_can_t_find_me">You can\'t find me.</string>

    <!--Time-->
    <string name="n_sec">Seconds remaining: %1$d</string>
    <string name="sec_remaining">Seconds remaining</string>
    <string name="game_over" translatable="false">Game Over</string>

    <!--Light Game-->
    <string name="ins_light_game_to_dark">It\'s too bright. Make it Darker.</string>
    <string name="ins_light_game_to_bright">It\'s too dark. Make it brighter.</string>

    <!--Button Game-->
    <string name="button_game_text">Press the button saying</string>
    <string name="press_the">Press the</string>

    <!--Lock door / Code-->
    <string name="enter_code">Enter Code:</string>
    <string name="the_door_is_locked">The door is locked…\n I have sent the code to you.</string>

    <!--Game Over-->
    <string name="your_score">Your Score</string>

    <!--colors-->
    <string name="Red">Red</string>
    <string name="Green">Green</string>
    <string name="Yellow">Yellow</string>
    <string name="Blue">Blue</string>
    <string name="Pink">Pink</string>
    <string name="Cyan" translatable="false">Cyan</string>
    <string name="White">White</string>
    <string name="Gray">Gray</string>
    <string name="Black">Black</string>

    <!--About-->
    <string name="story_text">Mark is bored. It is now your job to make him have fun again. By doing the things he wants to do.</string>
    <string name="story">Story</string>
    <string name="how_to_play">How to play</string>
    <string name="how_to_play_text">The goal in the game is to make as many assignments as possible before time runs out.</string>
    <string name="donate_text">Please donate some money. So I can build more games, programs, etc…\nEn: Thank you for your donation.\nSv: Tackar för din donation.</string>
    <string name="credits">Credits</string>
    <string name="credits_text">These pages have contributed with sound and pictures to the app.\n * https://openclipart.org\n * https://www.freesound.org</string>


</resources>
