<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dodlaz.mimic.AboutActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/story"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/story_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/story_text"
                android:textSize="20sp" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="15sp" />

            <TextView
                android:id="@+id/how_to_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_play"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/how_to_play_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_play_text"
                android:textSize="20sp" />


            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="15sp" />

            <TextView
                android:id="@+id/credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/credits_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/credits_text"
                android:textSize="20sp" />


            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="15sp" />

            <TextView
                android:id="@+id/donate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donate_menu_item_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donate_text"
                android:textSize="20sp" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="15sp" />

            <Button
                android:id="@+id/donate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_donate"
                android:text="@string/donate_menu_item_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>

