<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    tools:context="com.example.dodlaz.mimic.MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/main_textview_h1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/White"
                android:textSize="50sp" />

            <Button
                android:id="@+id/main_button_play"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_below="@+id/main_textview_h1"
                android:layout_gravity="center"
                android:background="@drawable/button_play"
                android:text="@string/play"
                android:textColor="@color/White" />

            <Button
                android:id="@+id/main_button_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignStart="@+id/main_button_play"
                android:layout_below="@+id/main_button_play"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:background="@drawable/buttonshape"
                android:text="@string/title_activity_settings"
                android:textColor="@color/White" />

            <Button
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignStart="@+id/main_button_play"
                android:layout_below="@+id/main_button_settings"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:background="@drawable/buttonshape"
                android:text="@string/about"
                android:textColor="@color/White" />

            <Button
                android:id="@+id/donate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignStart="@+id/main_button_play"
                android:layout_below="@+id/about"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:background="@drawable/button_donate"
                android:text="@string/donate_menu_item_title"
                android:textColor="@color/White" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150sp"

                android:layout_below="@+id/donate"
                android:layout_gravity="center"
                android:src="@drawable/bored" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
